force-app/main/default/objects/PicklistForFlow__c/PicklistForFlow__c.object-meta.xml
<CustomObject>
    <label>PicklistForFlow</label>
    <nameField>
        <displayFormat>FPV{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PicklistsforFlow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>