force-app/main/default/objects/PicklistForFlow__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>