force-app/main/default/objects/PicklistForFlow__c/fields/PicklistFieldName__c.field-meta.xml
<CustomField>
    <fullName>PicklistFieldName__c</fullName>
    <label>PicklistFieldName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>