force-app/main/default/objects/PicklistForFlow__c/fields/PickListLabel__c.field-meta.xml
<CustomField>
    <fullName>PickListLabel__c</fullName>
    <label>PickListLabel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>