force-app/main/default/objects/PicklistForFlow__c/fields/PickListValue__c.field-meta.xml
<CustomField>
    <fullName>PickListValue__c</fullName>
    <label>PickListValue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>